--- a/(2)Meet.html
+++ b/(2)Meet.html
@@ -12,7 +12,7 @@
         <div class="box1">
 
         </div>
-            <a href="(1)index.html">
+            <a href="index.html">
               <img class="logo "src="All Poses.png" alt="Three stick figures dancing.">
             </a>
 
@@ -160,7 +160,7 @@
       <div class="box1">
 
       </div>
-          <a  href="(1)index.html">
+          <a  href="index.html">
             <img class="logo" src="All Poses.png" alt="Three stick figures dancing.">
           </a>
 
