--- a/(4)Connect.html
+++ b/(4)Connect.html
@@ -12,7 +12,7 @@
       <div class="box1">
 
       </div>
-          <a href="(1)index.html">
+          <a href="index.html">
             <img class="logo "src="All Poses.png" alt="Three stick figures dancing.">
           </a>
 
