--- a/index.html
+++ b/index.html
@@ -7,21 +7,14 @@
   </head>
 
   <body>
-      <script src="script.js"> </script>
 
-
+  <!-- VIDEOS  -->
       <video class="BackgroundVid" src="https://www.commlab.nyuadim.com/MangF21/30_MF_-_Juan_Manuel_Rodriguez.mp4" autoplay loop muted poster="Thumbnail.png">
           </video>
           <div class="whiteback"> </div>
-              <!-- VIDEO  -->
+
     <video id="popupvid" class="popup" src="https://www.commlab.nyuadim.com/MangF21/30_MF_-_Juan_Manuel_Rodriguez.mp4" controls poster="Thumbnail.png">
     </video>
-
-
-
-
-
-
 
 
 <!-- HEADER -->
@@ -63,9 +56,11 @@
     </div>
 
   </header>
+
+<!-- PLAY BUTTON -->
     <button id="playbutton" onclick="buttonHandler()">Play<img id="playbtn" src="Pose 1.png"></button>
 
 
-
+      <script src="script.js"> </script>
   </body>
 </html>
